# MLogger

./: .gitignore  .gitmodules  README-zh.md  README.md
native/: .clang-format  .clangd  .gitignore  CMakeLists.txt
native/src/: MLogger.cpp  MLogger.h
native/src/bridge/: bridge.cpp  bridge.h
native/src/core/: logger_config.cpp  logger_config.h  logger_manager.cpp  logger_manager.h
native/src/utils/: path_utils.cpp  path_utils.h  str_utils.cpp  str_utils.h
native/tests/: test_boundary.cpp  test_c_interface.c  test_error_handling.cpp  test_memory.cpp  test_mlogger.cpp  test_simple.cpp  test_stress.cpp
scripts/: .gitignore  ruff.toml
scripts/check/: __init__.py  check_all.py  cross_compile_check.py  project_check.py  toolchain_check.py
scripts/compile/: PLATFORMS.md  build.py
unity/: .gitattributes  .gitignore  unity.sln.DotSettings
unity/Assets/Plugins/MLogger/Demo/Scene/: performance.unity  test.unity
unity/Assets/Plugins/MLogger/Demo/Scripts/: MLoggerPerformanceTest.cs  MLoggerTest.cs
unity/Assets/Plugins/MLogger/Editor/: MLoggerLogViewer.cs  MLoggerSettingsProvider.cs
unity/Assets/Plugins/MLogger/Resources/: MLoggerSettings.asset
unity/Assets/Plugins/MLogger/Runtime/: MLoggerConfig.cs  MLoggerHandler.cs  MLoggerManager.cs  MLoggerNative.cs  MLoggerSettings.cs  MLoggerTest.cs
unity/Assets/Scene/: test.unity
unity/ProjectSettings/: ProjectSettings.asset
